# lupo-tts

./: .taurignore  Cargo.toml  README.md
.github/workflows/: dist.yml
bones/: Cargo.toml  build.rs  tauri.conf.json
bones/src/: lib.rs  main.rs
cli/: .gitignore  Cargo.toml
cli/src/: main.rs  main_audio.rs  main_fail.rs  main_twitch.rs
fur/: Cargo.toml  index.html
fur/src/: app.rs  main.rs
tail/: Icon-Lupo-TTS.icns  README.md
