[package]
name = "lupo-cli"
description = "A CLI tool for testing, no clever name."
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
natural-tts = "0.2"
rodio = "0.20"

dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
url = "2"
oauth2 = { version = "5", features = ["reqwest", "pkce-plain"] }
bytes = "1"
